--- a/mobile/src/main/res/layout/content_set_persion.xml
+++ b/mobile/src/main/res/layout/content_set_persion.xml
@@ -38,6 +38,24 @@
         <View style="@style/Interval" />
 
         <com.wow.carlauncher.common.view.SetView
+            android:id="@+id/sv_set_back"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            st:titleEx="设置备份"
+            st:type="buttonB" />
+
+        <View style="@style/Interval" />
+
+        <com.wow.carlauncher.common.view.SetView
+            android:id="@+id/sv_my_trip"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            st:titleEx="我的行程"
+            st:type="buttonB" />
+
+        <View style="@style/Interval" />
+
+        <com.wow.carlauncher.common.view.SetView
             android:id="@+id/sv_logout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
