--- a/mobile/src/main/res/layout/content_l_xmly_fm.xml
+++ b/mobile/src/main/res/layout/content_l_xmly_fm.xml
@@ -82,12 +82,9 @@
                 android:id="@+id/tv_about"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:ellipsize="marquee"
-                android:focusable="false"
+                android:ellipsize="end"
                 android:gravity="center"
-                android:includeFontPadding="false"
-                android:marqueeRepeatLimit="marquee_forever"
-                android:singleLine="true"
+                android:lines="1"
                 android:text="欢迎收听"
                 android:textColor="@color/theme_xmlyfm_about"
                 app:layout_heightPercent="15%h"
