--- a/mobile/src/main/res/layout/content_l_music.xml
+++ b/mobile/src/main/res/layout/content_l_music.xml
@@ -43,23 +43,29 @@
             android:gravity="center"
             android:orientation="vertical">
 
-            <com.wow.carlauncher.common.theme.TRelativeLayout
+            <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                app:layout_heightPercent="50%h">
+                app:layout_heightPercent="50%h"
+                app:layout_widthPercent="50%h">
 
                 <com.wow.carlauncher.common.view.CustomRoundAngleImageView
                     android:id="@+id/music_iv_cover"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_centerInParent="true"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:contentDescription="@string/app_name"
                     android:scaleType="centerCrop"
                     android:src="@drawable/theme_music_dcover"
-                    app:layout_heightPercent="100%h"
-                    app:layout_widthPercent="100%h"
                     app:radius="6dp" />
-            </com.wow.carlauncher.common.theme.TRelativeLayout>
+
+                <com.wow.carlauncher.common.view.CircleImageView
+                    android:id="@+id/music_iv_cover2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:contentDescription="@string/app_name"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/theme_music_dcover" />
+            </FrameLayout>
 
             <com.wow.carlauncher.common.view.AutoMarqueeTextView
                 android:id="@+id/tv_music_title"
