--- a/mobile/src/main/res/layout/item_set_skin_select.xml
+++ b/mobile/src/main/res/layout/item_set_skin_select.xml
@@ -21,15 +21,33 @@
         android:layout_weight="1"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/name"
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="36dp"
-            android:ellipsize="end"
-            android:gravity="center_vertical|left"
-            android:singleLine="true"
-            android:textColor="#de000000"
-            android:textSize="16dp" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/name"
+                android:layout_width="0dp"
+                android:layout_height="36dp"
+                android:layout_weight="1"
+                android:ellipsize="end"
+                android:gravity="center_vertical|left"
+                android:singleLine="true"
+                android:textColor="#de000000"
+                android:textSize="16dp" />
+
+            <TextView
+                android:id="@+id/xiazai_num"
+                android:layout_width="72dp"
+                android:layout_height="36dp"
+                android:ellipsize="end"
+                android:gravity="center_vertical|right"
+                android:singleLine="true"
+                android:textColor="#de000000"
+                android:textSize="13dp" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -65,17 +83,17 @@
                 android:textColor="#de000000"
                 android:textSize="14dp"
                 tools:ignore="RtlHardcoded" />
+
+            <TextView
+                android:id="@+id/tv_down"
+                android:layout_width="72dp"
+                android:layout_height="36dp"
+                android:ellipsize="end"
+                android:gravity="center_vertical|right"
+                android:singleLine="true"
+                android:text="点击下载"
+                android:textColor="#de000000"
+                android:textSize="14dp" />
         </LinearLayout>
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/tv_down"
-        android:layout_width="72dp"
-        android:layout_height="36dp"
-        android:ellipsize="end"
-        android:gravity="center"
-        android:singleLine="true"
-        android:text="点击下载"
-        android:textColor="#de000000"
-        android:textSize="14dp" />
 </LinearLayout>
