--- a/mobile/src/main/res/values/colors.xml
+++ b/mobile/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorAccent">#ff7ba4b9</color>
+    <color name="colorAccent">#e62d4f</color>
     <color name="colorPrimary">#ff394a53</color>
     <color name="colorPrimaryDark">#ff949bc4</color>
 
