--- a/mobile/src/main/res/layout/activity_set.xml
+++ b/mobile/src/main/res/layout/activity_set.xml
@@ -248,6 +248,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical|right"
+                    android:paddingLeft="10dp"
                     android:paddingRight="10dp"
                     android:text="保存"
                     android:textColor="@color/colorPrimary"
